got the parser and sorter working

--- a/parser1.0/Makefile
+++ b/parser1.0/Makefile
@@ -2,7 +2,7 @@ CC=gcc
 TARGET=main
 
 all:
-	$(CC) main.c utility.c -o $(TARGET)
+	$(CC) main.c utility.c poly.c parser.c -o $(TARGET)
 
 clean:
 	rm $(TARGET)
