Basic Vector Multiplication (hard coded but hey it works)

--- a/elimination/Makefile
+++ b/elimination/Makefile
@@ -1,8 +1,12 @@
 CC=nvcc
+CC2=gcc
 TARGET=elim
+TARGET_UTILITY=matrixUtil
 
 all:
-	$(CC) main.c cublasOps.c textMatrixParsing.c -lcublas -o $(TARGET)
+	$(CC) main.c cublasOps.cu textMatrixParsing.c -lcublas -o $(TARGET)
+	$(CC2) util.c -o $(TARGET_UTILITY)
 
 clean:
 	rm $(TARGET)
+	rm $(TARGET_UTILITY)
