LabelledPolynomial and very beginning of the f4/5 algorithm

--- a/parser1.0/Makefile
+++ b/parser1.0/Makefile
@@ -2,7 +2,7 @@ CC=gcc
 TARGET=main
 
 all:
-	$(CC) main.c utility.c poly.c parser.c macaulay.c -o $(TARGET)
+	$(CC) main.c utility.c poly.c parser.c macaulay.c f45.c -o $(TARGET)
 
 clean:
 	rm $(TARGET)
