--- a/elimination/Makefile
+++ b/elimination/Makefile
@@ -4,11 +4,11 @@ TARGET=elim
 TARGET_UTILITY=util
 
 all:
-	$(CC) main.c cublasOps.cu cublasOps2.cu textMatrixParsing.c -lcublas -lcusparse -o $(TARGET)
+	$(CC) main.c cublasOps.cu cublasOps2.cu cusparseOps.cu textMatrixParsing.c -lcublas -lcusparse -o $(TARGET)
 	$(CC2) util.c -o $(TARGET_UTILITY)
 
 debug:
-	$(CC) -pg main.c cublasOps.cu cublasOps2.cu textMatrixParsing.c -lcublas -lcusparse -o $(TARGET)
+	$(CC) -pg main.c cublasOps.cu cublasOps2.cu cusparseOps.cu textMatrixParsing.c -lcublas -lcusparse -o $(TARGET)
 	$(CC2) util.c -o $(TARGET_UTILITY)
 
 clean:
